--- a/winapi.vcxproj.filters
+++ b/winapi.vcxproj.filters
@@ -9,10 +9,6 @@
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hpp;hxx;hm;inl;inc;xsd</Extensions>
     </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="winapi_file.cpp">
@@ -25,12 +21,6 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="winapi_shell.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="winapi_gdi.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="winapi_wout.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="winapi_structures.cpp">
@@ -51,6 +41,12 @@
     <ClCompile Include="winapi_window.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="wout.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="gdi.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="winapi_file.h">
@@ -68,19 +64,7 @@
     <ClInclude Include="winapi_shell.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="winapi_window.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="winapi_gdi.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="winapi_wout.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="color.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="winapi_timer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="winapi_DataConversion.h">
@@ -101,12 +85,6 @@
     <ClInclude Include="winapi_GUI.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Factories.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="winapi_drag.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="splitter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -125,5 +103,29 @@
     <ClInclude Include="Bitmap.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GdiObjectFactory.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="high_performance_timer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="window.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="wout.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="gdi.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="KeyboardInput.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="drag.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="todo.txt" />
   </ItemGroup>
 </Project>
